# apex-force-openeo

./: .dockerignore  .docsyncignore  .gitattributes  .readthedocs.yaml  CHANGELOG.md  Dockerfile  custom_processes_force.py  force_level2_openeo_test.py  pixi.toml  run_load_stac.py
cwl/: docker-requirement.cwl  docker-requirement.yaml  force-enums.yml  force-l2-workflow.cwl  force-l2.cwl  force-level2-enums.yml  force-tsa-workflow.cwl  force-tsa.cwl  staging.cwl
docs/: .gitignore  README.md  pixi.toml
etc/: force-level2-parameters.template  force-tsa-parameters.template  output-catalogue.template  output-item-continent.template  output-item-footer.template  output-item-header.template
examples/: README.md
material/: S2A_MSIL1C_20241113T101251_N0511_R022_T32TPQ_20241113T121135.SAFE.json  S2B_MSIL1C_20241228T101339_N0511_R022_T32TPQ_20241228T120532.SAFE.json  S2B_MSIL1C_20241228T101339_N0511_R022_T32TQQ_20241228T120532.SAFE.json  catalogue.json  force-l2.cwl  force-level2-wrapper.sh  l2ps.prm  l2ps.template  tds.txt
notebooks/: FORCE_full_example.ipynb  FORCE_input_provision.ipynb  FORCE_level_2_with_query.ipynb  FORCE_query_example.ipynb  Reproduce_FORCE_l2_no_output.ipynb  run_FORCE_TSA.ipynb
python/: pyproject.toml
python/docs/: openeo-force-parameter-journey.d2
python/docs/src/: onion-concrete.typ
python/src/force_utils/: __init__.py  cli.py  contributor.py  datacube_definition.py  datacube_store.py  force_aoi_converter.py  force_stac.py
python/src/force_utils/data/: sentinel-2-band-metadata.json
python/src/stac_staging/: cli.py  download.py  main.py  util.py
python/test/stac_staging/: conftest.py  test_download.py  test_reading.py
python/test/stac_staging/data/stac/: catalog.json  test_item_collection.json
python/test/stac_staging/data/stac/test_item/: test_item.json
python/test/stac_staging/scripts/: generate_test_stac.py
resources/: force-aoi-converter.py  force-level2-wrapper.sh  l2ps.template  output-item-boa-asset.template  output-item-continent.template  output-item-footer.template  (+3 more)
(+81 files in other folders)
