[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "stac-staging"
version = "0.0.1-dev"
requires-python = ">= 3.10"
dependencies = [
    "click>=8.3.1",
    "geopandas>=1.1.3",
    "pystac>=1.14.3",
    "stac-asset>=0.4.7",
]

[project.scripts]
download-item = "stac_staging.main:main"
force-aoi-converter = "force_utils.force_aoi_converter:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["stac_staging", "force_utils"]
