[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "force-python-utils"
version = "0.0.13"
requires-python = ">= 3.10"
dependencies = [
    "click>=8.3.2",
    "geopandas>=1.1.3",
    "py-multihash>=3.0.0",
    "pystac[validation]>=1.14.3",
    "rasterio>=1.4.4",
    "stac-asset>=0.4.7",
    "aiohttp>=3.13.5",
]

[project.scripts]
download-stac = "stac_staging.cli:download_from_stac"
force-aoi-converter = "force_utils.force_aoi_converter:main"
datacube-bounding-box = "force_utils.datacube_definition:compute_datacube_bounding_box"
gen-stac = "force_utils.cli:gen_stac"

[tool.setuptools.packages.find]
where = ["src"]
include = ["stac_staging", "force_utils"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
